# cat_feeder_firmware

./: .cproject  .gitignore  CMakeLists.txt  README.md  STM32F0.cmake  STM32F042x6.cmake  st_nucleo_f0.cfg
cmake/: STM32F0.cmake  console.cmake  gccDownloaderHelper.cmake
drivers/: CMakeLists.txt
drivers/includes/: f0_basic_timer.h  f0_basic_timer_memory.h  f0_gpio.h  f0_gpio_memory.h  f0_memory.h  f0_rcc.h  f0_rcc_memory.h  f0_timer_memory.h  f0_uart.h  f0_uart_memory.h  i_gpio.h  i_rcc.h  i_timer.h  i_uart.h
drivers/sources/: CMakeLists.txt  console_cmd_table.cpp  f0_basic_timer.cpp  f0_basic_timer_memory.cpp  f0_gpio_memory.cpp  f0_rcc.cpp  f0_rcc_memory.cpp  f0_timer_memory.cpp  f0_uart.cpp  f0_uart_memory.cpp
include/: IGpio.h  IGpioMemory.h  f0GpioMemory.h  mxconstants.h  serialParser.h  stm32f0xx_hal_conf.h  waitForCommandStart.h
includes/: CMakeLists.txt  IGpio.h  IUart.h  circular_buffer.h  console_cmd_table.h  console_io_uart.h  f0Gpio.h  f0GpioMemory.h  f0Uart.h  f0UartMemory.h  f0_gpio_memory.h  f0_memory.h  f0_rcc.h  f0_rcc_memory.h  f0_uart.h  f0_uart_memory.h  i_comm.h  i_gpio.h  i_rcc.h  i_uart.h  isr_vectors.h  rcc.h  serialParserStates.h  serial_parser.h  serial_parser_states.h  simpleProtocolParser.h  simple_protocol_parser.h  stm32f0xx_hal_conf.h
ldscripts/: STM32F030R8Tx_FLASH.ld  mem.ld  sections.ld
sources/: CMakeLists.txt  console_cmd_table.cpp  f0GpioMemory.cpp  f0UartMemory.cpp  f0_gpio_memory.cpp  f0_rcc.cpp  f0_rcc_memory.cpp  f0_uart_memory.cpp  isr_vectors.cpp  main.cpp  rcc.cpp  serial_parser.cpp  serial_parser_states.cpp  simpleProtocolParser.cpp  simple_protocol_parser.cpp  startup.cpp  stm32f0xx_hal_msp.c  stm32f0xx_it.c  vectors.cpp
src/: CMakeLists.txt  f0GpioMemory.cpp  main.cpp  serialParser.cpp  simpleProtocolParser.cpp  stm32f0xx_hal_msp.c  stm32f0xx_it.c  waitForCommandStart.cpp
system/: CMakeLists.txt
system/include/: CMakeLists.txt
system/include/cmsis/: CMakeLists.txt
system/include/stm32f0xx_hal_driver/: CMakeLists.txt
system/includes/: CMakeLists.txt
system/includes/device/: CMakeLists.txt  stm32f0xx.h
system/src/: CMakeLists.txt
system/src/cmsis/: startup_stm32f030x8.S
system/src/stm32f0xx/: stm32f0xx_hal_cortex.c  stm32f0xx_hal_pwr.c  stm32f0xx_hal_rcc.c  stm32f0xx_hal_tim.c
system/src/stm32f0xx_hal_driver/: CMakeLists.txt
system/startup/: CMakeLists.txt  startup_stm32f030x8.s
test/: CMakeLists.txt
test/sources/: CMakeLists.txt  circular_buffer_test.cpp  f0_gpio_memory_test.cpp  f0_gpio_test.cpp  f0_rcc_memory_test.cpp  main.cpp  simple_protocol_parser_logic_test.cpp  simple_protocol_parser_test.cpp
test/src/: f0GpioMemoryTest.cpp  f0GpioTest.cpp  gpioTest.cpp  gpioTest.cpp.cpp  simpleProtocolParserTest.cpp  simpleProtocolParserTestLogic.cpp
